--- a/public/assets/css/auth.css
+++ b/public/assets/css/auth.css
@@ -39,9 +39,9 @@ form > div {
 }
 
 form > div > input {
-    border-left-width: 0px;
+    border-left-width: 0;
     border-left-style: solid;
-    border-right-width: 0px;
+    border-right-width: 0;
     border-right-style: solid;
 }
 
@@ -75,6 +75,13 @@ button[type="submit"]{
 
 .submit {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+.submit_row {
+    display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
 }
@@ -91,9 +98,68 @@ button[type="submit"]{
 }
 .additional span {
     font-size: 22px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 .additional a {
     font-size: 24px;
     color: #9a4dff;
+}
+input:focus-visible {
+    outline: 0;
+}
+/* для элемента input c type="checkbox" */
+.custom-checkbox>input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+/* для элемента label, связанного с .custom-checkbox */
+.custom-checkbox>span {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+}
+/* создание в label псевдоэлемента before со следующими стилями */
+.custom-checkbox>span::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 2px solid white;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+    border-radius: 0;
+    box-shadow: 2px 2px 0 #000000;
+}
+
+/* стили при наведении курсора на checkbox */
+.custom-checkbox>input:not(:disabled):not(:checked)+span:hover::before {
+    border-color: rgba(154, 77, 255, 0.25);
+}
+/* стили для активного чекбокса (при нажатии на него) */
+.custom-checkbox>input:not(:disabled):active+span::before {
+    background-color: rgba(154, 77, 255, 0.25);
+    border-color: rgba(154, 77, 255, 0.25);
+}
+/* стили для чекбокса, находящегося в фокусе */
+.custom-checkbox>input:focus+span::before {
+    box-shadow: 0 0 0 0.2rem rgba(154, 77, 255, 0.25);
+}
+/* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
+.custom-checkbox>input:focus:not(:checked)+span::before {
+    border-color: #9a4dff;
+}
+/* стили для чекбокса, находящегося в состоянии checked */
+.custom-checkbox>input:checked+span::before {
+    border-color: rgba(154, 77, 255, 0.25);
+    background-color: #9a4dff;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+/* стили для чекбокса, находящегося в состоянии disabled */
+.custom-checkbox>input:disabled+span::before {
+    background-color: #e9ecef;
 }
