--- a/public/assets/css/support.css
+++ b/public/assets/css/support.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
+  padding: 0; }
 
 html {
   /*font-size: 62.5%;*/ }
@@ -20,9 +19,10 @@ body {
   color: white; }
 
 .main {
-  padding: 60px 0;
-  width: 90vw;
-  margin: 0 auto; }
+    padding: 60px 0;
+    width: 90vw;
+    margin: 0 auto; }
+
 
 .contacts {
   display: flex;
@@ -52,16 +52,17 @@ body {
   align-items: center; }
 
 .card {
-  background-color: #474747;
-  max-width: 200px;
-  padding: 10px 10px;
-  border: 3px solid #474747;
-  transition: all 0.3s;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: stretch;
-  min-width: 200px; }
+    background-color: #474747;
+    max-width: 200px;
+    padding: 10px 10px;
+    border: 3px solid #474747;
+    transition: all 0.3s;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    min-width: 200px;
+    box-sizing: border-box; }
   .card__description {
     display: flex;
     flex-direction: column;
