Ability to view images for posts
Added a modal window to the admin panel for viewing uploaded images (to be used for posts). The button style has also been changed. Added a slider for background images on the main page.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -16,7 +16,15 @@
     text-transform: uppercase;
 }
 
-.sect__welcome img {
+.sect__welcome .slide_image {
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.sect__welcome .slide_image > img {
     z-index: -1;
     position: absolute;
     width: 100%;
@@ -151,10 +159,10 @@
 }
 
 .server_info__wrapper {
-    margin: 0 auto; 
-    width: min-content; 
-    display: flex; 
-    align-items: center; 
+    margin: 0 auto;
+    width: min-content;
+    display: flex;
+    align-items: center;
     flex-direction: column;
 }
 
