--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -56,19 +56,21 @@ header .header__links > a, .button_login {
     position: relative;
 }
 .gui_button > p {
-    font-family: 'Press Start 2P', cursive;
     color: #fefefe;
     background-color: #9a4dff;
-    font-size: 18px;
     padding: 6px 3px 3px 5px;
     z-index: 2;
     margin: 0;
     text-shadow: 2px 2px 0px #000000;
     outline: solid #7b3dcc 3px;
+    font-family: "Noto Sans", serif;
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
 }
 /*======== FOR AUTH FORM ========*/
 .gui_button > p > img {
-    height: 24px;
+    height: 32px;
     margin-right: 5px;
 }
 /*======== /FOR AUTH FORM ========*/
@@ -78,7 +80,7 @@ header .header__links > a, .button_login {
     width: 100%;
     height: 100%;
     padding: 0 5px;
-    border: solid black 3px;
+    border: solid #111111 3px;
 }
 .gui_button > .vertical {
     position: absolute;
@@ -86,7 +88,7 @@ header .header__links > a, .button_login {
     width: 100%;
     height: 100%;
     padding: 5px 0;
-    border: solid black 3px;
+    border: solid #111111 3px;
 }
 .gui_button:hover p {
     background-color: #7b3dcc;
@@ -212,7 +214,7 @@ header .header__links > a, .button_login {
 }
 
 footer {
-    background-color: #111111;
+    background-color: #000000;
 }
 
 .footer_wrapper {
