--- a/public/assets/css/auth.css
+++ b/public/assets/css/auth.css
@@ -16,6 +16,7 @@
 }
 .wrapper {
     margin: 50px 0;
+    width: 420px;
 }
 .main_box {
     background-color: rgba(17, 17, 17, 85%);
@@ -50,6 +51,17 @@ form > div > input {
     font-size: 24px;
     margin-left: 15px;
 }
+
+.label_input span[role=alert] {
+    margin: -22px 2px 30px 2px;
+    color: #ff033e;
+    font-size: 17px;
+}
+
+.is-invalid {
+    margin: 5px 0;
+}
+
 .label_input input {
     font-size: 22px;
     padding: 10px 10px;
@@ -57,6 +69,11 @@ form > div > input {
     border-top-width: 4px;
     border-bottom-width: 4px;
 }
+
+.custom-checkbox span {
+    font-size: 20px;
+}
+
 .label_input {
     display: flex;
     flex-direction: column;
