--- a/public/assets/css/launcher.css
+++ b/public/assets/css/launcher.css
@@ -1,9 +1,6 @@
 .sect__welcome {
     height: 600px;
     overflow: hidden;
-    background-image: url(https://freshcraft.pheo-design.ru/img/background-image-welcome.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
     background-color: #111111;
     color: white;
     display: flex;
@@ -20,12 +17,20 @@
 .sect__welcome .cover {
     z-index: 1;
     margin-right: 32px;
+    pointer-events: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .sect__welcome .bg_image {
     z-index: -1;
     position: absolute;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 .filter_on_poster {
