--- a/public/assets/css/post.css
+++ b/public/assets/css/post.css
@@ -33,7 +33,19 @@
 }
 
 .title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title > h4 {
     text-align: center;
+    color: white;
+    background-color: black;
+    width: fit-content;
+    padding: 4px 8px;
+    font-size: 24px;
+    margin: 0;
 }
 
 .main-container ul {
@@ -46,7 +58,7 @@
     word-wrap: break-word;
     background-color: #e6e6e6;
     padding: 2px 4px;
-    border-radius: 0.5em;
+    border-radius: 5px;
 }
 
 .main-container > p > img {
@@ -70,7 +82,7 @@
 .main-container blockquote {
     border-left: 5px solid gray;
     padding: 0 15px;
-    background-color: #f6f8fa;
+    background-color: rgba(161, 161, 161, 0.33);
     border-radius: 0.3em;
 }
 
