--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -92,13 +92,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 0 50px 32px 50px;
+    margin: 50px;
     justify-content: center;
 }
 
 .content_container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     margin: 0 20px;
 }
@@ -109,7 +109,7 @@
 
 .more_containers {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .more_containers img {
